// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.pokemon.pokebot";
option java_outer_classname = "PokeBotProto";
option objc_class_prefix = "POKE";

package pokebot;


message Pokemon {
  int32 id = 1;
  string name = 2;
  int32 height = 3;
  int32 weight = 4;
  repeated string types = 5;
  string thumbnail = 6;
  string image = 7;
  string habitats = 8;
  string flavorText = 9;
}

message PokeInput {
  string name = 1;
}

// Interface exported by the server.
service PokeBot {
  // A server-to-client streaming RPC.
  rpc searchPokemon(PokeInput) returns (stream Pokemon) {}
}
